dashboard/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: winc-dashboard
  labels:
    app: winc-dashboard
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: winc-dashboard
  type: ClusterIP
