dashboard/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: winc-dashboard
  labels:
    app: winc-dashboard
spec:
  to:
    kind: Service
    name: winc-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
